Update AddCommentForm functionality

--- a/blog/nextjs-authjs-v5.mdx
+++ b/blog/nextjs-authjs-v5.mdx
@@ -266,7 +266,7 @@ export async function getComments() {
 }
 ```
 
-Ahora se preguntara que hace `<AddCommentForm session={session} />`. Se encarga de validar si el usuario esta logueado y postear un commentarios si es que si lo está.
+Now you might be wondering what `<AddCommentForm session={session} />` does. It is responsible for validating if the user is logged in and posting a comment if they are.
 
 ```javascript
 "use client";
